--- a/src/main/resources/templates/admin/fragment/fragment.html
+++ b/src/main/resources/templates/admin/fragment/fragment.html
@@ -40,7 +40,7 @@
             crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script th:src="@{https://cdn.ckeditor.com/ckeditor5/31.0.0/classic/ckeditor.js}"></script>
 <!--    <script th:src="@{https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js}"></script>-->
-
+    <script src="//rum-static.pingdom.net/pa-61e059750d7ce5001100065b.js" async></script>
 
     <script>
         $(()=>{
